--- a/hositamtam/src/main/webapp/html/myPage.html
+++ b/hositamtam/src/main/webapp/html/myPage.html
@@ -66,6 +66,7 @@
 
     <!-- Main -->
     <!-- My Information -->
+    <!-- <section id="myPage"> -->
     <section id="myinfo" class="max-container">
       <!-- Level -->
       <div class="mylevel">
@@ -78,22 +79,29 @@
             시장 햇병아리🐤
           </div>
         </section>
-        <section class="mylevel__gage">
-          <div
-            class="mylevel__gage__value"
-            style="width: 25%; background-color: #e6007e"
-          >
-            25%
-          </div>
-        </section>
+        <div id="mylevel__gage">
+          <section class="mylevel__gage">
+            <div
+              class="mylevel__gage__value"
+              style="width: 35%; background-color: #e6007e"
+            >
+              35%
+            </div>
+          </section>
+        </div>
+
         <div class="mylevel__gage__data">
-          <span>시장 <br />햇병아리</span><span>시장<br />지박령</span>
+          <span>시장 <br />왕초보</span>
+          <span>시장 <br />햇병아리</span>
+          <span>시장 <br />탐험가</span>
+          <span>시장 <br />지킴이</span>
+          <span>시장 <br />지박령</span>
         </div>
       </div>
 
       <!-- Profile -->
       <div class="myprofile">
-        탐탐 님 (tmi****) <br />
+        <div class="myprofile__name">탐탐 님 (tmi****)</div>
         <div class="modify__delete__button">
           <button class="myprofile__modify__button">정보수정</button>
           <button class="myprofile__delete__button">회원탈퇴</button>
@@ -119,34 +127,34 @@
     </section>
 
     <!-- My Activity -->
-    <section id="myactivity" class="max-container">
-      <h2>나의 활동 내역</h2>
-      <div>
-        <h4 id="myStore">내가 등록한 점포</h4>
+    <section id="myActivity" class="max-container">
+      <h1 class="myActivity__title">나의 활동 내역</h1>
+      <div class="myActivity">
+        <h2 id="myStore">✔️ 내가 등록한 점포</h2>
         <div class="myStore">
           <span class="myStore__contents"> 괘법르네시떼 거인통닭 </span>
           <button class="myStore__more">더보기</button>
         </div>
         <hr />
       </div>
-      <div>
-        <h4 id="myPost">내가 작성한 글</h4>
+      <div class="myActivity">
+        <h2 id="myPost">✍️ 내가 작성한 글</h2>
         <div class="myPost">
           <span class="myPost__contents"> 거인통닭 사실 포장만 됨 </span>
           <button class="myPost__more">더보기</button>
         </div>
         <hr />
       </div>
-      <div>
-        <h4 id="myReview">내가 작성한 리뷰</h4>
+      <div class="myActivity">
+        <h2 id="myReview">📝 내가 작성한 리뷰</h2>
         <div class="myReview">
           <span class="myReview__contents"> 백종원 나와서 이제 못 먹음 </span>
           <button class="myReview__more">더보기</button>
         </div>
         <hr />
       </div>
-      <div>
-        <h4 id="myStoreLike">내가 찜한 점포</h4>
+      <div class="myActivity">
+        <h2 id="myStoreLike">❤️ 내가 찜한 점포</h2>
         <div class="myStoreLike">
           <span class="myStoreLike__contents"> 거인통닭 / 순희닭강정 </span>
           <button class="myStoreLike__more">더보기</button>
@@ -154,6 +162,7 @@
         <hr />
       </div>
     </section>
+    <!-- </section> -->
 
     <!-- Footer -->
     <footer id="information" class="section">
@@ -169,7 +178,7 @@
             <p class="information__title">
               <br />
               <i class="fa-brands fa-github"></i>
-              https://github.com/wlstjd3398/hositamtam
+              https://github.com/wlstjd3398/TMI.git
             </p>
           </div>
         </div>
