--- a/hositamtam/src/main/webapp/html/storeInsertAndUpdate.html
+++ b/hositamtam/src/main/webapp/html/storeInsertAndUpdate.html
@@ -80,18 +80,18 @@
                 <button class="change__location">위치 수정</button>
               </label>
               <div class="store__type">
-                <h2 class="store__type__title">점포 형태</h2>
+                <h2 class="store__type__title siau__h2">점포 형태</h2>
                 <button class="store__type__button">좌판</button>
                 <button class="store__type__button">매장</button>
               </div>
               <div class="store__payment">
-                <h2 class="store__payment__title">결제 방식</h2>
+                <h2 class="store__payment__title siau__h2">결제 방식</h2>
                 <button class="store__payment__button">현금</button>
                 <button class="store__payment__button">카드</button>
                 <button class="store__payment__button">계좌이체</button>
               </div>
               <div class="store__category">
-                <h2 class="store__category__title">취급 품목</h2>
+                <h2 class="store__category__title siau__h2">취급 품목</h2>
                 <button class="store__category__button">농산물</button>
                 <button class="store__category__button">음식점</button>
                 <button class="store__category__button">가공식품</button>
@@ -103,11 +103,11 @@
               </div>
               <div class="store__category3">
                 <button class="store__category__button">의류</button>
-                <button class="store__category__button">신발</button>
-                <button class="store__category__button">기타</button>
+                <button class="store__category__button2">신발</button>
+                <button class="store__category__button2">기타</button>
               </div>
               <div class="store__photo">
-                <h2 class="store__photo__title">점포 사진</h2>
+                <h2 class="store__photo__title siau__h2">점포 사진</h2>
                 <label class="store__photo__label">
                   <input type="file" name="photo" class="store__photo__input" />
                 </label>
@@ -136,7 +136,7 @@
             <p class="information__title">
               <br />
               <i class="fa-brands fa-github"></i>
-              https://github.com/wlstjd3398/hositamtam
+              https://github.com/wlstjd3398/TMI.git
             </p>
           </div>
         </div>
