--- a/hositamtam/src/main/webapp/html/main.html
+++ b/hositamtam/src/main/webapp/html/main.html
@@ -19,8 +19,8 @@
          crossorigin="anonymous"
        ></script>
        <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <!-- JavaScript -->
    
@@ -34,17 +34,17 @@
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
   
-    <script defer src="./js/main.js"></script>
+    <script defer src="../js/main.js"></script>
     
 </head>
 <body>
   
     <div  class="section" id="section1">
-     <video src="./video/main영상.mp4" muted autoplay loop id="myVideo"> </video>
+     <video src="../video/main영상.mp4" muted autoplay loop id="myVideo"> </video>
 
       <header class="mainHeader">
         <div class="mainHeader__logo">
-          <img class="mainHeader__logo__img" src="images/logo.ico" alt="logo" />
+          <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
         </div>
   
         <form id="searchForm" method="get" action="SearchController">
@@ -154,23 +154,23 @@
       <div class="gradeInfo">
         <div class="gradeIcon">
           <div class="gradeImage">
-            <img src="./images/icons8-병아리-60.png" alt="">
+            <img src="../images/icons8-병아리-60.png" alt="">
   
             </div>
           <div class="gradeImage">
-          <img src="./images/icons8-caveman-64.png" alt="">
+          <img src="../images/icons8-caveman-64.png" alt="">
 
           </div>
           <div class="gradeImage">
-            <img src="./images/icons8-explorer-60.png" alt="">
+            <img src="../images/icons8-explorer-60.png" alt="">
 
           </div>
           <div class="gradeImage">
-            <img src="./images/icons8-기사-64.png" alt="">
+            <img src="../images/icons8-기사-64.png" alt="">
 
           </div>
           <div class="gradeImage">
-            <img src="./images/icons8-spaceman-66.png" alt="">
+            <img src="../images/icons8-spaceman-66.png" alt="">
 
           </div>
 
@@ -198,7 +198,7 @@
     <footer id="information" class="section">
       <div class="information__located">
         <div class="max-container">
-          <img class="footer__logo__img" src="images/logo.ico" alt="logo" />
+          <img class="footer__logo__img" src="../images/logo.ico" alt="logo" />
 
 
           <h2 class="information__title">&copy; TMI - All rights reserved</h2>
