--- a/hositamtam/src/main/webapp/html/marketList.html
+++ b/hositamtam/src/main/webapp/html/marketList.html
@@ -21,9 +21,9 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/login.css" />
-    <link rel="stylesheet" href="css/marketList.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/marketList.css" />
 
 
     <!-- JavaScript -->
@@ -37,7 +37,7 @@
 <body>
     <header class="mainHeader">
         <div class="mainHeader__logo">
-          <img class="mainHeader__logo__img" src="images/logo.ico" alt="logo" />
+          <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
         </div>
   
         <form id="searchForm" method="get" action="SearchController">
@@ -78,7 +78,7 @@
         <div id="mkSearchName">부평으로 검색된 결과입니다.</div>
         <div class="mkcontainer" class="row">
             <div id="markerImg" class="col-3">
-                <img src="./images/마커.png" width="80px">
+                <img src="../images/마커.png" width="80px">
             </div>
             <div class="col-9">
                 <p id="mkName">부평깡통시장</p>
@@ -90,7 +90,7 @@
         <div class="mkcontainer" class="row">
 
             <div id="markerImg" class="col-3">
-                <img src="./images/마커.png" width="80px">
+                <img src="../images/마커.png" width="80px">
             </div>
             <div class="col-9">
                 <p id="mkName">국제시장</p>
@@ -101,7 +101,7 @@
         <div class="mkcontainer" class="row">
 
             <div id="markerImg" class="col-3">
-                <img src="./images/마커.png" width="80px">
+                <img src="../images/마커.png" width="80px">
             </div>
             <div class="col-9">
                 <p id="mkName">자갈치시장</p>
