--- a/hositamtam/src/main/webapp/html/postMain.html
+++ b/hositamtam/src/main/webapp/html/postMain.html
@@ -25,20 +25,20 @@
        crossorigin="anonymous"
      ></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/login.css" />
-    <link rel="stylesheet" href="css/postMain.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/postMain.css" />
 
     <title>postMain</title>
-    <script defer src="./js/postMain.js"></script>
-    <script defer src="./js/tab.js"></script>
+    <script defer src="../js/postMain.js"></script>
+    <script defer src="../js/tab.js"></script>
 </head>
 <body>
    
   <div  class="section" id="section1">
       <header class="mainHeader">
         <div class="mainHeader__logo">
-          <img class="mainHeader__logo__img" src="images/logo.ico" alt="logo" />
+          <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
         </div>
   
         <form id="searchForm" method="get" action="SearchController">
@@ -244,7 +244,7 @@
                   
               </div>    
             <div id="imgBox" class="col-4">
-              <img src="./images/부산레디.PNG" style="width: 360px;">
+              <img src="../images/부산레디.PNG" style="width: 360px;">
               <div id="likeComment">
                 <i class="bi bi-hand-thumbs-up">1</i>
                 <i class="bi bi-chat-left-dots">2</i>   
