네이버 지도 연동

--- a/hositamtam/src/main/webapp/html/marketList.html
+++ b/hositamtam/src/main/webapp/html/marketList.html
@@ -23,6 +23,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/loginHeader.css" />
     <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/marketList.css" />
 
 
@@ -32,7 +33,7 @@
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=51l0xj0874"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script defer src="./js/marketList.js"></script>
+    <script defer src="../js/marketList.js"></script>
 </head>
 <body>
     <header class="mainHeader">
@@ -73,7 +74,7 @@
       <div  class="section" >
 
       
-    <div id="map" ></div>
+    <div id="map"></div>
     <div id="mkListResult" class="row">
         <div id="mkSearchName">부평으로 검색된 결과입니다.</div>
         <div class="mkcontainer" class="row">
