프론트- 마이페이지,점포상세 수정

--- a/hositamtam/src/main/webapp/html/storeDetail.html
+++ b/hositamtam/src/main/webapp/html/storeDetail.html
@@ -75,16 +75,16 @@
         <button class="storeDetail__modify">점포 수정</button>
       </div>
       <div class="storeDetail__star__name">
-        <span><h4 class="storeDetail__h4">⭐ 4.0</h4></span>
+        <span><h4 class="storeDetail__h4 storeDetail__star">⭐ 4.0</h4></span>
         <span>
           <h4 class="storeDetail__h4 storeDetail__name">
-            초량 신발원 옆 러시아 음식점
+            신발원 옆 러시아 음식점
           </h4>
         </span>
       </div>
       <div class="storeDetail__storeType">
         <span class="storeDetail__storeType__title"
-          ><h4 class="storeDetail__h4">가게 형태</h4></span
+          ><h4 class="storeDetail__h4">점포 형태</h4></span
         >
         <span>매장</span>
       </div>
