--- a/hositamtam/src/main/webapp/html/myPage.html
+++ b/hositamtam/src/main/webapp/html/myPage.html
@@ -66,7 +66,6 @@
 
     <!-- Main -->
     <!-- My Information -->
-    <!-- <section id="myPage"> -->
     <section id="myinfo" class="max-container">
       <!-- Level -->
       <div class="mylevel">
@@ -109,18 +108,18 @@
 
         <section class="myprofile__activity">
           <div class="myprofile__activity__contents">
-            <a href="#myStore">✔️16 <br />내가 등록한 점포</a>
+            <a href="#myStore">✔️ 16 <br />내가 등록한 점포</a>
           </div>
           <div class="myprofile__activity__contents">
-            <a href="#myPost">✍️1 <br />내가 작성한 글</a>
+            <a href="#myPost">✍️ 1 <br />내가 작성한 글</a>
           </div>
         </section>
         <section class="myprofile__activity2">
           <div class="myprofile__activity__contents">
-            <a href="#myStoreLike">❤️5 <br />내가 찜한 점포</a>
+            <a href="#myStoreLike">❤️ 5 <br />내가 찜한 점포</a>
           </div>
           <div class="myprofile__activity__contents">
-            <a href="#myReview">📝1 <br />내가 작성한 리뷰</a>
+            <a href="#myReview">📝 1 <br />내가 작성한 리뷰</a>
           </div>
         </section>
       </div>
@@ -128,6 +127,100 @@
 
     <!-- My Activity -->
     <section id="myActivity" class="max-container">
+      <div class="myActivity">
+        <div class="myStore">
+          <h2 id="myStore" class="myPage__h2">✔️ 내가 등록한 점포</h2>
+          <button class="myStore__more">더보기</button>
+        </div>
+        <table class="myPage__table">
+          <tr>
+            <th class="myPage__th">점포명</th>
+            <th class="myPage__th">점포 형태</th>
+            <th class="myPage__th">결제 방식</th>
+            <th class="myPage__th">취급 품목</th>
+          </tr>
+          <tr>
+            <td class="myPage__td">괘법르네시떼 거인통닭</td>
+            <td class="myPage__td">매장</td>
+            <td class="myPage__td">현금 카드 계좌이체</td>
+            <td class="myPage__td">음식점</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="myActivity">
+        <div class="myPost">
+          <h2 id="myPost" class="myPage__h2">✍️ 내가 작성한 글</h2>
+          <button class="myPost__more">더보기</button>
+        </div>
+        <table class="myPage__table">
+          <tr>
+            <th class="myPage__th">제목</th>
+            <th class="myPage__th">카테고리</th>
+            <th class="myPage__th">좋아요</th>
+            <th class="myPage__th">작성일</th>
+          </tr>
+          <tr>
+            <td class="myPage__td">거인통닭의 실체</td>
+            <td class="myPage__td">일상</td>
+            <td class="myPage__td">👍 3</td>
+            <td class="myPage__td">2023-10-04</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="myActivity">
+        <div class="myReview">
+          <h2 id="myReview" class="myPage__h2">📝 내가 작성한 리뷰</h2>
+          <button class="myReview__more">더보기</button>
+        </div>
+        <table class="myPage__table">
+          <tr>
+            <th class="myPage__th">점포명</th>
+            <th class="myPage__th">평점</th>
+            <th class="myPage__th">리뷰내용</th>
+            <th class="myPage__th">작성일</th>
+          </tr>
+          <tr>
+            <td class="myPage__td">거인통닭</td>
+            <td class="myPage__td">⭐ 4.5</td>
+            <td class="myPage__td">
+              이렇게 맛있는 치킨은 제 인생 처음이에요 !
+            </td>
+            <td class="myPage__td">2023-10-04</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="myActivity">
+        <div class="myStoreLike">
+          <h2 id="myStoreLike" class="myPage__h2">❤️ 내가 찜한 점포</h2>
+          <button class="myStoreLike__more">더보기</button>
+        </div>
+        <table class="myPage__table">
+          <tr>
+            <th class="myPage__th">점포명</th>
+            <th class="myPage__th">점포 형태</th>
+            <th class="myPage__th">결제 방식</th>
+            <th class="myPage__th">취급 품목</th>
+          </tr>
+          <tr>
+            <td class="myPage__td">괘법르네시떼 거인통닭</td>
+            <td class="myPage__td">매장</td>
+            <td class="myPage__td">현금 카드 계좌이체</td>
+            <td class="myPage__td">음식점</td>
+          </tr>
+          <tr>
+            <td class="myPage__td">순희닭강정</td>
+            <td class="myPage__td">매장</td>
+            <td class="myPage__td">현금 카드 계좌이체</td>
+            <td class="myPage__td">음식점</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+
+    <!-- <section id="myActivity" class="max-container">
       <h1 class="myActivity__title">나의 활동 내역</h1>
       <div class="myActivity">
         <h2 id="myStore">✔️ 내가 등록한 점포</h2>
@@ -135,7 +228,7 @@
           <span class="myStore__contents"> 괘법르네시떼 거인통닭 </span>
           <button class="myStore__more">더보기</button>
         </div>
-        <hr />
+        <hr class="myPage__hr" />
       </div>
       <div class="myActivity">
         <h2 id="myPost">✍️ 내가 작성한 글</h2>
@@ -143,7 +236,7 @@
           <span class="myPost__contents"> 거인통닭 사실 포장만 됨 </span>
           <button class="myPost__more">더보기</button>
         </div>
-        <hr />
+        <hr class="myPage__hr" />
       </div>
       <div class="myActivity">
         <h2 id="myReview">📝 내가 작성한 리뷰</h2>
@@ -151,7 +244,7 @@
           <span class="myReview__contents"> 백종원 나와서 이제 못 먹음 </span>
           <button class="myReview__more">더보기</button>
         </div>
-        <hr />
+        <hr class="myPage__hr" />
       </div>
       <div class="myActivity">
         <h2 id="myStoreLike">❤️ 내가 찜한 점포</h2>
@@ -159,10 +252,9 @@
           <span class="myStoreLike__contents"> 거인통닭 / 순희닭강정 </span>
           <button class="myStoreLike__more">더보기</button>
         </div>
-        <hr />
+        <hr class="myPage__hr" />
       </div>
-    </section>
-    <!-- </section> -->
+    </section> -->
 
     <!-- Footer -->
     <footer id="information" class="section">
