--- a/hositamtam/src/main/webapp/html/main.html
+++ b/hositamtam/src/main/webapp/html/main.html
@@ -43,38 +43,38 @@
      <video src="../video/main영상.mp4" muted autoplay loop id="myVideo"> </video>
 
       <header class="mainHeader">
-        <div class="mainHeader__logo">
-          <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
+      <div class="mainHeader__logo">
+        <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
+      </div>
+
+      <form id="searchForm" method="get" action="SearchController">
+        <div class="market__search">
+          <input
+            type="text"
+            class="market__searchInput"
+            name="market"
+            id="searchInput"
+            placeholder="   궁금한 시장 이름을 입력하세요. Ex.부평깡통시장"
+          />
+          <button
+            class="market__searchButton"
+            type="submit"
+            name="action"
+            value="search"
+          >
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </div>
-  
-        <form id="searchForm" method="get" action="SearchController">
-          <div class="market__search">
-            <input
-              type="text"
-              class="market__searchInput"
-              name="market"
-              id="searchInput"
-              placeholder="   궁금한 시장 이름을 입력하세요. Ex.부평깡통시장"
-            />
-            <button
-              class="market__searchButton"
-              type="submit"
-              name="action"
-              value="search"
-            >
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </div>
-        </form>
-  
-        <nav class="mainHeader__nav">
-          <ul class="mainHeader__menu">
-            <li><a class="mainHeader__menu__item">서비스안내</a></li>
-            <li><a class="mainHeader__menu__item">시끌시끌</a></li>
-            <li><a class="mainHeader__menu__item">카테고리</a></li>
-          </ul>
-        </nav>
-      </header>
+      </form>
+
+      <nav class="mainHeader__nav">
+        <ul class="mainHeader__menu">
+          <li><a class="mainHeader__menu__item">서비스안내</a></li>
+          <li><a class="mainHeader__menu__item">시끌시끌</a></li>
+          <li><a class="mainHeader__menu__item" id="category">카테고리</a></li>
+        </ul>
+      </nav>
+    </header>
       <!-- header 끝 -->
 
       <div class="listCategory" >
@@ -199,6 +199,7 @@
       <div class="information__located">
         <div class="max-container">
           <img class="footer__logo__img" src="../images/logo.ico" alt="logo" />
+		  <img class="footer__logo__img" src="../images/2030black-removebg-preview.png"  />
 
 
           <h2 class="information__title">&copy; TMI - All rights reserved</h2>
