이모티콘-> icon 변경 / 경로수정

--- a/hositamtam/src/main/webapp/html/join.html
+++ b/hositamtam/src/main/webapp/html/join.html
@@ -21,9 +21,9 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/join.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/join.css" />
 
     <!-- JavaScript -->
     <script src="/finalProject/js/join.js" charset="UTF-8"></script>
