--- a/hositamtam/src/main/webapp/html/storeInsertAndUpdate.html
+++ b/hositamtam/src/main/webapp/html/storeInsertAndUpdate.html
@@ -21,12 +21,12 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/storeInsertAndUpdate.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/storeInsertAndUpdate.css" />
 
     <!-- JavaScript -->
-    <script type="module" src="src/storeInsertAndUpdate.js" defer></script>
+    <script defer src="../js/storeInsertAndUpdate.js"></script>
   </head>
   <body>
     <!-- Header -->
