--- a/hositamtam/src/main/webapp/html/login.html
+++ b/hositamtam/src/main/webapp/html/login.html
@@ -21,9 +21,9 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/login.css" />
 
     <!-- JavaScript -->
   </head>
