--- a/hositamtam/src/main/webapp/html/myPage.html
+++ b/hositamtam/src/main/webapp/html/myPage.html
@@ -21,13 +21,13 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/loginHeader.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/myPage.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/myPage.css" />
 
     <!-- JavaScript -->
-    <script type="module" src="src/myProfileDelete.js" defer></script>
-    <script type="module" src="src/anchor.js" defer></script>
+    <script defer src="../js/myPageUpdate.js"></script>
+    <script defer src="../js/anchor.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -109,18 +109,30 @@
 
         <section class="myprofile__activity">
           <div class="myprofile__activity__contents">
-            <a href="#myStore">✔️ 16 <br />내가 등록한 점포</a>
+            <a href="#myStore">
+              <i class="fa-solid fa-store myStore__icon"></i> 16 <br />
+              내가 등록한 점포
+            </a>
           </div>
           <div class="myprofile__activity__contents">
-            <a href="#myPost">✍️ 1 <br />내가 작성한 글</a>
+            <a href="#myPost">
+              <i class="fa-regular fa-pen-to-square myPost__icon"></i> 1 <br />
+              내가 작성한 글
+            </a>
           </div>
         </section>
         <section class="myprofile__activity2">
           <div class="myprofile__activity__contents">
-            <a href="#myStoreLike">❤️ 5 <br />내가 찜한 점포</a>
+            <a href="#myStoreLike">
+              <i class="fa-solid fa-heart myStoreLike__icon"></i> 5 <br />
+              내가 찜한 점포
+            </a>
           </div>
           <div class="myprofile__activity__contents">
-            <a href="#myReview">📝 1 <br />내가 작성한 리뷰</a>
+            <a href="#myReview">
+              <i class="fa-regular fa-comment-dots myReview__icon"></i> 1 <br />
+              내가 작성한 리뷰
+            </a>
           </div>
         </section>
       </div>
@@ -130,7 +142,10 @@
     <section id="myActivity" class="max-container">
       <div class="myActivity">
         <div class="myStore">
-          <h2 id="myStore" class="myPage__h2">✔️ 내가 등록한 점포</h2>
+          <h2 id="myStore" class="myPage__h2">
+            <i class="fa-solid fa-store myStore__icon"></i>
+            &nbsp;내가 등록한 점포
+          </h2>
           <button class="myStore__more">더보기</button>
         </div>
         <table class="myPage__table">
@@ -181,7 +196,10 @@
 
       <div class="myActivity">
         <div class="myPost">
-          <h2 id="myPost" class="myPage__h2">✍️ 내가 작성한 글</h2>
+          <h2 id="myPost" class="myPage__h2">
+            <i class="fa-regular fa-pen-to-square myPost__icon"></i>
+            &nbsp;내가 작성한 글
+          </h2>
           <button class="myPost__more">더보기</button>
         </div>
         <table class="myPage__table">
@@ -195,8 +213,10 @@
           <tr>
             <td class="myPost__td__title">거인통닭의 실체</td>
             <td class="myPost__td">일상</td>
-            <td class="myPost__td">👍 3</td>
-            <td class="myPost__td">📝 0</td>
+            <td class="myPost__td">
+              <i class="fa-regular fa-thumbs-up myPost__thumbsUp"></i> &nbsp;3
+            </td>
+            <td class="myPost__td">0</td>
             <td class="myPost__td">2023-10-04</td>
           </tr>
           <tr>
@@ -204,8 +224,10 @@
               핫둘셋넷다여일여아열핫둘셋넷다여일여아열
             </td>
             <td class="myPost__td">일상</td>
-            <td class="myPost__td">👍 3</td>
-            <td class="myPost__td">📝 0</td>
+            <td class="myPost__td">
+              <i class="fa-regular fa-thumbs-up myPost__thumbsUp"></i> &nbsp;3
+            </td>
+            <td class="myPost__td">0</td>
             <td class="myPost__td">2023-10-04</td>
           </tr>
         </table>
@@ -213,7 +235,10 @@
 
       <div class="myActivity">
         <div class="myReview">
-          <h2 id="myReview" class="myPage__h2">📝 내가 작성한 리뷰</h2>
+          <h2 id="myReview" class="myPage__h2">
+            <i class="fa-regular fa-comment-dots myReview__icon"></i>
+            &nbsp;내가 작성한 리뷰
+          </h2>
           <button class="myReview__more">더보기</button>
         </div>
         <table class="myPage__table">
@@ -225,7 +250,9 @@
           </tr>
           <tr>
             <td class="myReview__td__name">괘법르네시떼 거인통닭</td>
-            <td class="myReview__td__star">⭐ 5.0</td>
+            <td class="myReview__td__star">
+              <i class="fa-solid fa-star myReview__star"></i> 5.0
+            </td>
             <td class="myReview__td__contents">
               이렇게 맛있는 치킨은 제 인생 처음이에요 !
             </td>
@@ -233,7 +260,9 @@
           </tr>
           <tr>
             <td class="myReview__td__name">핫둘셋넷다여일여아열핫둘셋넷다</td>
-            <td class="myReview__td__star">⭐ 5.0</td>
+            <td class="myReview__td__star">
+              <i class="fa-solid fa-star myReview__star"></i> 5.0
+            </td>
             <td class="myReview__td__contents">
               핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열핫둘셋넷다여일여아열
             </td>
@@ -244,7 +273,10 @@
 
       <div class="myActivity">
         <div class="myStoreLike">
-          <h2 id="myStoreLike" class="myPage__h2">❤️ 내가 찜한 점포</h2>
+          <h2 id="myStoreLike" class="myPage__h2">
+            <i class="fa-solid fa-heart myStoreLike__icon"></i>
+            &nbsp;내가 찜한 점포
+          </h2>
           <button class="myStoreLike__more">더보기</button>
         </div>
         <table class="myPage__table">
@@ -292,31 +324,41 @@
     <aside>
       <section>
         <a class="myPage__store" href="#myStore" title="back to store">
-          <div class="store__icon">✔️</div>
+          <div class="store__icon">
+            <i class="fa-solid fa-store myStore__menu"></i>
+          </div>
         </a>
         <div class="myPage__store__info">내가 등록한 점포 보기</div>
       </section>
       <section>
         <a class="myPage__post" href="#myPost" title="back to post">
-          <div class="store__icon">✍️</div>
+          <div class="store__icon">
+            <i class="fa-regular fa-pen-to-square myPost__menu"></i>
+          </div>
         </a>
         <div class="myPage__post__info">내가 작성한 글 보기</div>
       </section>
       <section>
         <a class="myPage__review" href="#myReview" title="back to review">
-          <div class="store__icon">📝</div>
+          <div class="store__icon">
+            <i class="fa-regular fa-comment-dots myReview__menu"></i>
+          </div>
         </a>
         <div class="myPage__review__info">내가 작성한 리뷰 보기</div>
       </section>
       <section>
         <a class="myPage__storeLike" href="#myStoreLike" title="back to like">
-          <div class="store__icon">❤️</div>
+          <div class="store__icon">
+            <i class="fa-solid fa-heart myStoreLike__menu"></i>
+          </div>
         </a>
         <div class="myPage__storeLike__info">내가 찜한 점포 보기</div>
       </section>
       <section>
         <a class="myPage__arrow-up" href="#myinfo" title="back to top">
-          <div class="store__icon">🔝</div>
+          <div class="store__icon">
+            <i class="fa-solid fa-arrow-up arrowUp__menu"></i>
+          </div>
         </a>
         <div class="myPage__arrow-up__info">맨 위로 가기</div>
       </section>
