--- a/hositamtam/src/main/webapp/html/myPageUpdate.html
+++ b/hositamtam/src/main/webapp/html/myPageUpdate.html
@@ -21,9 +21,9 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/finalProject/css/loginHeader.css" />
-    <link rel="stylesheet" href="/finalProject/css/footer.css" />
-    <link rel="stylesheet" href="/finalProject/css/myPageUpdate.css" />
+    <link rel="stylesheet" href="../css/loginHeader.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/myPageUpdate.css" />
 
     <!-- JavaScript -->
     <script src="/finalProject/js/myPageUpdate.js" charset="UTF-8"></script>
