css, js, img 경로 수정

--- a/hositamtam/src/main/webapp/html/storeDetail.html
+++ b/hositamtam/src/main/webapp/html/storeDetail.html
@@ -6,7 +6,7 @@
     <title>호시탐탐</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 
     <!-- G-Market Fonts -->
     <link
@@ -33,7 +33,7 @@
     <!-- Header -->
     <header class="mainHeader">
       <div class="mainHeader__logo">
-        <img class="mainHeader__logo__img" src="images/logo.ico" alt="logo" />
+        <img class="mainHeader__logo__img" src="../images/logo.ico" alt="logo" />
       </div>
 
       <form id="searchForm" method="get" action="SearchController">
@@ -116,7 +116,7 @@
           <img src="images/icons8-병아리-60.png" class="review__level__photo" />
         </span> -->
       <div class="review__info">
-        <img src="images/icons8-병아리-60.png" class="review__level__photo" />
+        <img src="../images/icons8-병아리-60.png" class="review__level__photo" />
         <span class="review__ask">
           탐탐 님 해당 점포에 리뷰를 남겨주세요.
         </span>
@@ -162,7 +162,7 @@
       <div class="review__contents__list">
         <section class="review__contents__photo" style="color: #0188cc">
           <img
-            src="images/icons8-caveman-64.png"
+            src="../images/icons8-caveman-64.png"
             class="review__contents__img"
           />
         </section>
@@ -183,7 +183,7 @@
       <div class="review__contents__list">
         <section class="review__contents__photo" style="color: #662583">
           <img
-            src="images/icons8-explorer-60.png"
+            src="../images/icons8-explorer-60.png"
             class="review__contents__img"
           />
         </section>
@@ -199,7 +199,7 @@
       <div class="review__contents__list">
         <section class="review__contents__photo" style="color: #0e4194">
           <img
-            src="images/icons8-spaceman-66.png"
+            src="../images/icons8-spaceman-66.png"
             class="review__contents__img"
           />
         </section>
